--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,12 @@
-:root {
-
-}
+:root {}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
+  /* DEVELOPMENT ONLY */
+  background-color: gray; 
 }
 
 /* ## Colors
