Css Positioning and size DONE
ToDo:
1. Detail: border radius
2. Import fonts
3. Var for all the reusable
4. Transition for the dark theme toggle
5. Border color for the followers tiles

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,9 @@
 :root {
   --tile-width: 250px;
   --followers-tile-height: 200px;
-  --overwiew-tile-height: 100px;
+  --overwiew-tile-height: 120px;
+  --tile-margin: 15px;
+  --tile-padding: 15px;
 }
 
 * {
