--- a/app/page.module.css
+++ b/app/page.module.css
@@ -161,3 +161,10 @@
     width: 18px;
     border-radius: 50%;
 }
+
+.darkmode_checkbox {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    /* border-radius: 50%; */
+}
