--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,40 @@
   --followers-tile-height: 200px;
   --overwiew-tile-height: 120px;
   --tile-margin: 15px;
-  --tile-padding: 15px;
+
+  --lime-green: hsl(163, 72%, 41%);
+  --bright-red: hsl(356, 69%, 56%);
+
+  --facebook-border-color: hsl(208, 92%, 53%);
+  --twitter-border-color: hsl(203, 89%, 53%);
+  --instagram-border-color: linear-gradient(to right,
+      hsl(37, 97%, 70%),
+      hsl(329, 70%, 58%));
+  --youtube-border-color: hsl(348, 97%, 39%);
+}
+
+.light {
+  --background-color: hsl(0, 0%, 100%);
+  --top-background-patter: hsl(225, 100%, 98%);
+  --card-background: hsl(227, 47%, 96%);
+  --text-legend: hsl(228, 12%, 44%);
+  --text-main: hsl(230, 17%, 14%);
+
+  /* --toggle-background-color: hsl(230, 17%, 14%); */
+  --toggle-background: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --toggle-position: right;
+}
+
+.dark {
+  --background-color: hsl(230, 17%, 14%);
+  --top-background-patter: hsl(232, 19%, 15%);
+  --card-background: hsl(228, 28%, 20%);
+  --text-legend: hsl(228, 34%, 66%);
+  --text-main: hsl(0, 0%, 100%);
+
+  /* --toggle-background-color: hsl(0, 0%, 100%); */
+  --toggle-background-color: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+  --toggle-position: left;
 }
 
 * {
@@ -12,17 +45,22 @@
   box-sizing: border-box;
 
   /* DEVELOPMENT ONLY */
-  background-color: gray;
+  background-color: var(--back-color);
   border-width: 1px;
   border-color: black;
   border-style: solid;
 }
 
-body {
+body,
+html {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--back-color);
 }
+
+
+
 
 /* ## Colors
 
@@ -72,3 +110,9 @@ body {
 
 - Family: [Inter](https://fonts.google.com/specimen/Inter)
 - Weights: 400, 700 */
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
