--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,28 +23,32 @@
     border-top-width: 5px;
     margin: var(--tile-margin);
     padding: var(--tile-padding);
+    background-color: var(--background-color);
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-
 }
 
 /* TODO - Set the borders of the tiles to the right color */
 #facebook {
-    border-top-color: blue;
+    border-top-color: var(--facebook-border-color);
 }
 
 #twitter {
-    border-top-color: blue;
+    border-top-color: var(--twitter-border-color);
 }
 
 #instagram {
-    border-top-color: blue;
+    border-color: linear-gradient(red, Blue);
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
 }
 
 #youtube {
-    border-top-color: blue;
+    border-top-color: var(--youtube-border-color);
 }
 
 .followers_tile_title {
@@ -104,6 +108,8 @@
     height: var(--overwiew-tile-height);
     margin: var(--tile-margin);
     padding: var(--tile-padding);
+    background-color: var(--background-color);
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: space-between;
@@ -145,19 +151,39 @@
     align-items: flex-end;
 }
 
+.dark_mode_container {
+    width: 120px;
+    display: flex;
+    font-size: small;
+    font-weight: bold;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .dark_theme_toggle {
-    width: 50px;
+    width: 40px;
     height: 20px;
     border-radius: 10px;
     padding: 1px;
     display: flex;
     align-items: center;
-    /* DEVELOPMENT ONLY */
-    background-color: black;
+    background: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+    /* background: var(--toggle-background-color); */
+    justify-content: var(--toggle-position);
 }
 
 .dark_theme_toggle_btn {
-    height: 18px;
-    width: 18px;
+    height: 15px;
+    width: 15px;
+    margin: 2px;
     border-radius: 50%;
+    border-color: var(--background-color);
+    background-color: var(--background-color);
+}
+
+.dark_theme_toggle_input {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+
 }
