--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
   --followers-tile-height: 200px;
   --overwiew-tile-height: 120px;
   --tile-margin: 15px;
+  --tile-padding: 15px;
+  --overview_tile-padding: 20px;
 
   --lime-green: hsl(163, 72%, 41%);
   --bright-red: hsl(356, 69%, 56%);
@@ -17,7 +19,7 @@
 
 .light {
   --background-color: hsl(0, 0%, 100%);
-  --top-background-patter: hsl(225, 100%, 98%);
+  --top-background-patter: hsl(229, 67%, 95%);
   --card-background: hsl(227, 47%, 96%);
   --text-legend: hsl(228, 12%, 44%);
   --text-main: hsl(230, 17%, 14%);
@@ -29,7 +31,7 @@
 
 .dark {
   --background-color: hsl(230, 17%, 14%);
-  --top-background-patter: hsl(232, 19%, 15%);
+  --top-background-patter: hsl(231, 22%, 19%);
   --card-background: hsl(228, 28%, 20%);
   --text-legend: hsl(228, 34%, 66%);
   --text-main: hsl(0, 0%, 100%);
@@ -56,9 +58,28 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--back-color);
+  background-color: var(--background-color);
 }
 
+.background_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  background-color: var(--top-background-patter);
+  z-index: -1;
+  border-radius: 0 0 20px 20px;
+}
+
+
+body {
+  /* make retabgle full width and 400px height here */
+}
 
 
 
