Fixed the bug with the scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,11 @@ html {
   justify-content: center;
   align-items: center;
   background-color: var(--background-color);
+  height: 200%;
+}
+
+.main {
+  position: relative;
 }
 
 .background_image {
@@ -66,7 +71,7 @@ html {
   justify-content: center;
   align-items: center;
   background-color: var(--background-color);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -75,13 +80,6 @@ html {
   z-index: -1;
   border-radius: 0 0 20px 20px;
 }
-
-
-body {
-  /* make retabgle full width and 400px height here */
-}
-
-
 
 /* ## Colors
 
