--- a/app/globals.css
+++ b/app/globals.css
@@ -21,11 +21,11 @@
   --background-color: hsl(0, 0%, 100%);
   --top-background-patter: hsl(229, 67%, 95%);
   --card-background: hsl(227, 47%, 96%);
+  --card-background-hover: hsl(230, 25%, 86%);
   --text-legend: hsl(228, 12%, 44%);
   --text-main: hsl(230, 17%, 14%);
 
-  /* --toggle-background-color: hsl(230, 17%, 14%); */
-  --toggle-background: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --toggle-background-color: hsl(230, 22%, 74%);
   --toggle-position: right;
 }
 
@@ -33,11 +33,11 @@
   --background-color: hsl(230, 17%, 14%);
   --top-background-patter: hsl(231, 22%, 19%);
   --card-background: hsl(228, 28%, 20%);
+  --card-background-hover: hsl(229, 23%, 27%);
   --text-legend: hsl(228, 34%, 66%);
   --text-main: hsl(0, 0%, 100%);
 
-  /* --toggle-background-color: hsl(0, 0%, 100%); */
-  --toggle-background-color: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+  --toggle-background-color: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
   --toggle-position: left;
 }
 
